[tool.poetry]
name = "tdd"
version = "0.1.0"
description = ""
authors = ["Kamil Turek <kamil.turek@hotmail.com>"]

[tool.mypy]
exclude = [
    ".venv/"
]

[tool.black]
skip-string-normalization = true

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.960"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
